0.18.0  2007-07-14

 FEATURES

  * Add Inspect and Branch buttons to notification window. (Robert)

  * Add notification area icon with context menu. (Jelmer)

  * New tango icons. (Pascal Klein)

  * Add simple About dialog. (Jelmer)

 BUG FIXES

  * Fix option help strings to comply with the style guide. (Vincent)

  * Fix import of BzrError. (Aaron)

  * Fix missing attributes for DummyRevision. (Vincent)

  * Never refuse to run with newer versions of bzr, just warn. (Jelmer)


0.17.0  2007-06-15

 FEATURES

  * Added an EXPERIMENTAL feature for browsing remote branches in Olive 
    (Szilveszter)

  * Bookmarked locations are now added to branch/checkout history (Szilveszter)

  * There are now more columns in the file list, and you can sort by them
    (Szilveszter)

  * A location bar was added to the top of the file list. On Windows, the
    drive selector combo was moved here (Szilveszter)

  * Don't warn about incompatible versions when .dev version of Bazaar is used 
    (Aaron)

 BUG FIXES
 
  * Get and Checkout dialogs: scan the branch only if the entry has lost focus
    (#93653, Szilveszter)

  * Fixed 'bzr gcommit' if command not issued in a branch (#113394, Szilveszter)

0.16.0	2007-05-05

 FEATURES
 
  * An Initialize dialog added to Olive along with a 'ginit' command
  (#90839, Szilveszter)
  
  * Tags support added: 'gtags' command and Branch->Tags menu entry in Olive
  (#103725, Szilveszter)

 BUG FIXES

  * Sort plugins in gpreferences (Jelmer)

  * Give nicer errors when startup fails (John)

  * Fix 'bzr gdiff notafile' (#107812, John)

  * Find olive.glade on a couple more systems (John)

 INTERNALS
  
  * Some minor style fixes (John)

 DOCS
  
  * Recommend installation as 'gtk' not 'bzr-gtk'. (#104110, Szilveszter)

0.15.2	2007-04-03

 BUG FIXES

  * Fix regression that prevented gannotate from being used (#97473, 
                                                             Vincent, Jelmer)
