@@ -10,6 +10,8 @@
 
   * Add simple About dialog. (Jelmer)
 
+  * Add context menu in bzrk. (Jelmer)
+
  BUG FIXES
 
   * Fix option help strings to comply with the style guide. (Vincent)
